# cardano-ledger-specs

./: cabal.project  hie.yaml
alonzo/impl/: cardano-ledger-alonzo.cabal
alonzo/impl/src/Cardano/Ledger/: Alonzo.hs
alonzo/impl/src/Cardano/Ledger/Alonzo/: Scripts.hs  Translation.hs  Tx.hs  TxBody.hs  TxWitness.hs
alonzo/impl/test/lib/Test/Cardano/Ledger/Alonzo/Serialisation/: Generators.hs
cardano-ledger-test/: cardano-ledger-test.cabal
cardano-ledger-test/src/Test/Cardano/Ledger/: DependGraph.hs  Elaborators.hs  ModelChain.hs
cardano-ledger-test/src/Test/Cardano/Ledger/Elaborators/: Alonzo.hs  Shelley.hs
cardano-ledger-test/src/Test/Cardano/Ledger/ModelChain/: Address.hs  FeatureSet.hs  Properties.hs  Script.hs  Utils.hs  Value.hs
cardano-ledger-test/test/: Tests.hs
example-shelley/example-shelley-test/: cardano-ledger-example-shelley-test.cabal
example-shelley/example-shelley-test/src/Test/Cardano/Ledger/: Example.hs
example-shelley/impl/: cardano-ledger-example-shelley.cabal
example-shelley/impl/src/Cardano/Ledger/: Example.hs
nix/: haskell.nix
semantics/executable-spec/src/Control/State/Transition/: Extended.hs
shelley-ma/impl/: cardano-ledger-shelley-ma.cabal
shelley-ma/impl/src/Cardano/Ledger/: Allegra.hs  Mary.hs
shelley-ma/impl/src/Cardano/Ledger/Mary/: Value.hs
shelley-ma/impl/src/Cardano/Ledger/ShelleyMA/Rules/: Utxo.hs  Utxow.hs
shelley/chain-and-ledger/executable-spec/: shelley-spec-ledger.cabal
shelley/chain-and-ledger/executable-spec/bench/: Bench1.hs
shelley/chain-and-ledger/executable-spec/src/Cardano/Ledger/: Val.hs
shelley/chain-and-ledger/executable-spec/src/Shelley/Spec/Ledger/: BlockChain.hs  ByronTranslation.hs  Coin.hs  EpochBoundary.hs  Genesis.hs  LedgerState.hs  Rewards.hs  TxBody.hs  UTxO.hs
shelley/chain-and-ledger/executable-spec/src/Shelley/Spec/Ledger/API/: Mempool.hs  Protocol.hs  Validation.hs  Wallet.hs
shelley/chain-and-ledger/executable-spec/src/Shelley/Spec/Ledger/STS/: Bbody.hs  Chain.hs  Delegs.hs  Epoch.hs  Ledger.hs  Ledgers.hs  NewEpoch.hs  Newpp.hs  PoolReap.hs  Rupd.hs  Snap.hs  Tick.hs  Upec.hs  Utxo.hs
shelley/chain-and-ledger/executable-spec/test/: Criterion.hs  Tests.hs  shelley-spec-ledger-test.cabal
shelley/chain-and-ledger/executable-spec/test/Test/Shelley/Spec/Ledger/: BenchFuns.hs  Examples.hs
shelley/chain-and-ledger/shelley-spec-ledger-test/: shelley-spec-ledger-test.cabal
shelley/chain-and-ledger/shelley-spec-ledger-test/src/Test/Cardano/Ledger/: Val.hs
shelley/chain-and-ledger/shelley-spec-ledger-test/src/Test/Shelley/Spec/Ledger/: ApplyBlock.hs  Example.hs  Shrinkers.hs  Utils.hs
shelley/chain-and-ledger/shelley-spec-ledger-test/src/Test/Shelley/Spec/Ledger/Generator/: Block.hs  Core.hs  Presets.hs  Utxo.hs
shelley/chain-and-ledger/shelley-spec-ledger-test/src/Test/Shelley/Spec/Ledger/Generator/Trace/: Chain.hs
shelley/chain-and-ledger/shelley-spec-ledger-test/test/: Tests.hs
shelley/chain-and-ledger/shelley-spec-ledger-test/test/Test/Shelley/Spec/Ledger/: PoolRanking.hs  PropertyTests.hs  UnitTests.hs
shelley/chain-and-ledger/shelley-spec-ledger-test/test/Test/Shelley/Spec/Ledger/Rules/: ClassifyTraces.hs  TestChain.hs
voltaire-prototype/impl/: voltaire-prototype.cabal
voltaire-prototype/impl/src/Cardano/Ledger/Voltaire/: Prototype.hs  Translation.hs
voltaire-prototype/impl/src/Cardano/Ledger/Voltaire/Prototype/: Class.hs  One.hs  Two.hs  TxBody.hs
voltaire-prototype/impl/src/Cardano/Ledger/Voltaire/Prototype/One/: Translation.hs
voltaire-prototype/impl/src/Cardano/Ledger/Voltaire/Prototype/Rules/: Ledger.hs  LedgerState.hs  Ppup.hs  Utxo.hs  Utxow.hs
voltaire-prototype/impl/src/Cardano/Ledger/Voltaire/Prototype/Rules/Two/: Deleg.hs  Delpl.hs  Epoch.hs  Mir.hs  NewEpoch.hs  Upec.hs
voltaire-prototype/impl/src/Cardano/Ledger/Voltaire/Prototype/Rules/Utxow/: ShelleyStyleWitness.hs
voltaire-prototype/impl/src/Cardano/Ledger/Voltaire/Prototype/Two/: Translation.hs
