cabal-version: 3.0

name:                cardano-ledger-test
version:             0.1.0.0
synopsis:
  Testing harness, tests and benchmarks for Shelley style cardano ledgers
-- description:
-- bug-reports:
license:             Apache-2.0
author:              IOHK Formal Methods Team
maintainer:          nicholas.clarke@iohk.io
copyright:           2020 Input Output (Hong Kong) Ltd.
-- category:
build-type:          Simple
extra-source-files:
  CHANGELOG.md
  bench/resources/0_ledgerstate.cbor
  bench/resources/0_tx.cbor

common base
  build-depends:      base >= 4.12 && < 4.15

common project-config
  default-language:   Haskell2010

  ghc-options:        -Wall
                      -Wcompat
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wpartial-fields
                      -Wredundant-constraints
                      -Wunused-packages

library
  import:             base, project-config
  hs-source-dirs:     src
  exposed-modules:
    Test.Cardano.Ledger.TestableEra,
    Test.Cardano.Ledger.ModelChain,
    Test.Cardano.Ledger.ModelChain.Properties,
    Test.Cardano.Ledger.ModelChain.Utils,
    Test.Cardano.Ledger.Elaborators.Alonzo,
    Test.Cardano.Ledger.Elaborators.Shelley

  build-depends:
    shelley-spec-ledger,
    groups,
    containers,
    transformers,
    cardano-ledger-core,
    cardano-ledger-shelley-ma,
    cardano-slotting,
    strict-containers,
    tasty,
    mtl,
    tasty-quickcheck,
    time,
    cardano-crypto-class,
    data-default-class,
    lens,
    shelley-spec-ledger-test,
    cardano-ledger-alonzo,
    small-steps


benchmark bench
  import:             base, project-config

  type:             exitcode-stdio-1.0
  hs-source-dirs:
    bench
  main-is:          Main.hs
  other-modules:
    Bench.Cardano.Ledger.ApplyTx
    Bench.Cardano.Ledger.EpochBoundary
    Bench.Cardano.Ledger.Serialisation.Generators
  build-depends:
    bytestring,
    cardano-binary,
    cardano-crypto-class,
    cardano-ledger-core,
    cardano-ledger-shelley-ma-test,
    cardano-ledger-shelley-ma,
    containers,
    criterion,
    data-default-class,
    deepseq,
    QuickCheck,
    shelley-spec-ledger,
    shelley-spec-ledger-test
  ghc-options:
      -threaded
      -rtsopts
      -with-rtsopts=-N
      -O2

test-suite cardano-ledger-test
  import:             base, project-config

  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  hs-source-dirs:      test
  build-depends:
      cardano-ledger-test
    , shelley-spec-ledger
    , cardano-ledger-alonzo
    , shelley-spec-ledger-test
    , tasty
  ghc-options:
      -threaded
      -rtsopts
      -with-rtsopts=-N
      -- We set a bound here so that we're alerted of potential space
      -- leaks in our generators (or test) code.
      --
      -- The 4 megabytes stack bound and 200 megabytes heap bound were
      -- determined ad-hoc.
      "-with-rtsopts=-K4m -M250m"
