cabal-version: 2.2

name:                voltaire-prototype
version:             0.1.0.0
synopsis:            Shelley ledger with prototype governance rules
description:
  This package extends the Shelley ledger with experimental governance rules.
bug-reports:         https://github.com/input-output-hk/cardano-ledger-specs/issues
license:             Apache-2.0
author:              IOHK Formal Methods Team, Obsidian Systems LLC
maintainer:          formal.methods@iohk.io
copyright:           2020 Input Output (Hong Kong) Ltd.
category:            Network
build-type:          Simple

source-repository head
  type:     git
  location: https://github.com/input-output-hk/cardano-ledger-specs

common base
  build-depends:      base >= 4.12 && < 4.15

common project-config
  default-language:   Haskell2010

  ghc-options:        -Wall
                      -Wcompat
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wredundant-constraints
                      -Wpartial-fields
                      -Wunused-packages

library
  import:             base, project-config

  exposed-modules:
    Cardano.Ledger.Voltaire.Prototype
    Cardano.Ledger.Voltaire.Prototype.One
    Cardano.Ledger.Voltaire.Prototype.Class
    Cardano.Ledger.Voltaire.Prototype.Rules.Utxo
    Cardano.Ledger.Voltaire.Prototype.Rules.Utxow
    Cardano.Ledger.Voltaire.Prototype.Rules.Ppup
    Cardano.Ledger.Voltaire.Prototype.TxBody

  -- other-extensions:
  build-depends:
    bytestring,
    -- base16-bytestring,
    cardano-binary,
    -- cardano-crypto-class,
    cardano-ledger-core,
    cardano-ledger-shelley-ma,
    cardano-prelude,
    cardano-slotting,
    -- cborg,
    containers,
    -- data-default-class,
    deepseq,
    -- groups,
    -- mtl,
    nothunks,
    -- prettyprinter,
    -- primitive,
    shelley-spec-ledger,
    small-steps,
    strict-containers,
    -- text,
    transformers
  hs-source-dirs: src
